--- a/index.html
+++ b/index.html
@@ -1,38 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>ncwu</title>
+    <style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        body {
+            color: white;
+        }
+        .content {
+            background-color: pink;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            width: 100%;
+            height: 400px;
+            margin-top: -200px;
+            overflow: hidden;
+        }
+        .main {
+            text-align: center;
+            max-width: 600px;
+            height: 400px;
+            padding: 100px 0px;
+            /*验证div的位置*/
+            margin: 0 auto;
+
+        }
+        .main h1 {
+            font-family: "楷体";
+            /*设置字体*/
+            font-size: 70px;
+            /*设置字体大小*/
+            font-weight: 2px;
+            /*调整字体粗细*/
+        }
+
+        form {
+            padding: 20px 0;
+        }
+        form input {
+
+            border: 1px solid white;
+            display: block;
+            margin: 0px auto 10px auto;
+            padding: 10px;
+            width: 220px;
+            border-radius: 30px;
+            /*H5设置圆角边框*/
+            font-size: 18px;
+            font-weight: 300;
+            text-align: center;
+        }
+        form input:hover {
+            background-color: pink;
+        }
+
+        form button {
+            background-color: yellow;
+            border-radius: 10px;
+            border: 0;
+            height: 30px;
+            width: 50px;
+            padding: 5px 10px;
+        }
+        form button:hover {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
-    <h1>新用户注册</h1>
-    <form action="/register" method="">
-        <label for="">账户名</label>
-        <input type="text" placeholder="请输入手机号" name="username" autocomplete="off" required pattern="^/1[3,4,5,6,7,8,9]\d{9}$">
-        <br>
-        <label for="">密码</label>
-        <input id="psw" type="password" placeholder="至少六位密码" name="psw" required pattern="^.{6,}$">
-        <br>
-        <label for="">确认密码</label>
-        <input id="confirm" type="password" placeholder="至少六位密码" required><br>
-        <button onclick="commitClick(event);">注册</button>
-    </form>
+    <div class="content">
+        <div class="main">
+            <h1>疫情物资管理系统</h1>
+            <form>
+                <input type="text" name="username" placeholder="请输入账号" />
+                <input type="password" name="psw" placeholder="请输入密码">
+                <button type="submit">登&nbsp;&nbsp;录</button>
+                <button type="submit">注&nbsp;&nbsp;册</button>
+            </form>
+        </div>
+    </div>
 </body>
-<script>
-// 处理鼠标点击事件
-    function commitClick(e){
-        // 1.手机号是否已经注册
-        // 2.两次密码是否一致
-        // 3.提交后台注册 -》存数据库-》注册信息
-        // 4.基于注册信息提示跳转登录页面（记录相关账号密码直接赋值输入框，提升用户体验）
-        var pswFlie = document.getElementById("psw");
-        var confirmFlie = document.getElementById("confirm");
-        if(pswFlie.value != confirmFlie.value){
-            alert("两次密码不一致");
-            
-        }
-    }
-</script>
 </html>
