--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         .main h1 {
             font-family: "楷体";
             /*设置字体*/
-            font-size: 70px;
+            font-size: 50px;
             /*设置字体大小*/
             font-weight: 2px;
             /*调整字体粗细*/
@@ -74,7 +74,7 @@
 <body>
     <div class="content">
         <div class="main">
-            <h1>疫情物资管理系统</h1>
+            <h1>疫情物资管理系统 by weiming</h1>
             <form>
                 <input type="text" name="username" placeholder="请输入账号" />
                 <input type="password" name="psw" placeholder="请输入密码">
