--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             color: white;
         }
         .content {
-            background-color: pink;
+            background-color: blue;
             position: absolute;
             top: 50%;
             left: 0;
@@ -74,7 +74,7 @@
 <body>
     <div class="content">
         <div class="main">
-            <h1>疫情物资管理系统 by weiming</h1>
+            <h1>华北水利水电大学70年校庆</h1>
             <form>
                 <input type="text" name="username" placeholder="请输入账号" />
                 <input type="password" name="psw" placeholder="请输入密码">
