--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <form>
                 <input type="text" name="username" placeholder="请输入账号" />
                 <input type="password" name="psw" placeholder="请输入密码">
-                <button type="submit"><a>>登&nbsp;&nbsp;录</a</button>
+                <button type="submit"><a href="home.html">登&nbsp;&nbsp;录</a></button>
                 <button type="submit">注&nbsp;&nbsp;册</button>
             </form>
         </div>
