--- a/index.html
+++ b/index.html
@@ -75,13 +75,18 @@
     <div class="content">
         <div class="main">
             <h1>华北水利水电大学70年校庆</h1>
-            <form>
+            <form action="" method="post">
                 <input type="text" name="username" placeholder="请输入账号" />
                 <input type="password" name="psw" placeholder="请输入密码">
-                <button type="submit"><a href="home.html">登&nbsp;&nbsp;录</a></button>
-                <button type="submit">注&nbsp;&nbsp;册</button>
+                <a href="home.html"></a><button type="submit">登&nbsp;&nbsp;录</button></a>
+                <button type="submit" onclick="zhuche();">注&nbsp;&nbsp;册</button>
             </form>
         </div>
     </div>
 </body>
+<script>
+    function zhuche(){
+        alert("注册成功");
+    }
+</script>
 </html>
