--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="content">
         <div class="main">
             <h1>华北水利水电大学70年校庆</h1>
-            <form action="" method="post">
+            <form action="home.html" method="post">
                 <input type="text" name="username" placeholder="请输入账号" />
                 <input type="password" name="psw" placeholder="请输入密码">
                 <a href="home.html"></a><button type="submit">登&nbsp;&nbsp;录</button></a>
