--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             color: white;
         }
         .content {
-            background-color: blue;
+            background-color: rgb(147, 147, 230);
             position: absolute;
             top: 50%;
             left: 0;
