--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/home.css">
 </head>
 <body onload="showImg()">
-<a href="home.html"><img src="images/home.jpg" width="1450" height="200" alt="华北水利水电大学70年校庆"></a>
+<a href="home.html"><img src="images/home.jpg" width="100%" height="200" alt="华北水利水电大学70年校庆"></a>
 <div class="dao-hang">
     <nav>
     <ul class="links-list">
